# career-website

./: .replit  README.md  app.py  chatbot.db  finance_data.db  package-lock.json  pyproject.toml
static/: script.js  styles.css
templates/: home.html
